force-app/main/default/objects/Error_Event__c/Error_Event__c.object-meta.xml
<CustomObject>
    <label>Error Event</label>
    <pluralLabel>Error Events</pluralLabel>
    <description>Source-agnostic staging record for a single inbound runtime error notification (e.g. an Apex exception email). One row per occurrence; deduplicated to an Error Signature for diagnosis.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Error Event Number</label>
        <type>AutoNumber</type>
        <displayFormat>EVT-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
</CustomObject>