force-app/main/default/objects/Error_Event__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class</label>
    <description>The failing Apex class parsed from the innermost stack frame. A component of the Apex fingerprint key and the entry point for scoped source retrieval.</description>
    <inlineHelpText>The Apex class where the error originated.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>