force-app/main/default/objects/Error_Event__c/fields/Apex_Method__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method__c</fullName>
    <label>Apex Method</label>
    <description>The failing method parsed from the innermost stack frame. Part of the fingerprint key. Line and column are deliberately excluded because they shift on every deploy.</description>
    <inlineHelpText>The method within the Apex class where the error originated.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>