force-app/main/default/objects/Error_Event__c/fields/Faulting_Element__c.field-meta.xml
<CustomField>
    <fullName>Faulting_Element__c</fullName>
    <label>Faulting Element</label>
    <description>The flow element where execution faulted, parsed from a flow fault notification. Part of the Flow fingerprint key. Populated only for Flow-sourced events.</description>
    <inlineHelpText>The flow element that faulted (Flow source only).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>