force-app/main/default/objects/Error_Event__c/fields/Fingerprint_Hash__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint_Hash__c</fullName>
    <label>Fingerprint Hash</label>
    <description>SHA-256 hex of the normalized fingerprint key for this occurrence. Not unique on the event (many events share a fingerprint); used to group events onto their Error Signature.</description>
    <inlineHelpText>The computed fingerprint that groups this event with identical errors. Set by the system.</inlineHelpText>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
</CustomField>