force-app/main/default/objects/Error_Event__c/fields/Flow_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_API_Name__c</fullName>
    <label>Flow API Name</label>
    <description>The API name of the failing flow parsed from a flow fault notification. Part of the Flow fingerprint key. Populated only for Flow-sourced events.</description>
    <inlineHelpText>The API name of the flow that faulted (Flow source only).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>