force-app/main/default/objects/Error_Event__c/fields/From_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Address__c</fullName>
    <label>From Address</label>
    <description>Sender of the inbound notification email. Used for triage and to help distinguish platform-generated mail from other sources.</description>
    <inlineHelpText>The email address that sent this error notification.</inlineHelpText>
    <type>Email</type>
</CustomField>