force-app/main/default/objects/Error_Event__c/fields/Message_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Message_Snippet__c</fullName>
    <label>Message Snippet</label>
    <description>The normalized leading message snippet (volatile tokens stripped) used as the message component of the fingerprint key. Truncated to the configured snippet length.</description>
    <inlineHelpText>The normalized error message used for fingerprinting (IDs, numbers, and quoted values removed).</inlineHelpText>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>