force-app/main/default/objects/Error_Event__c/fields/Parsed_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Exception_Type__c</fullName>
    <label>Parsed Exception Type</label>
    <description>The exception class parsed from the notification (e.g. System.NullPointerException). A component of the fingerprint key.</description>
    <inlineHelpText>The exception type extracted from the error text.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>