force-app/main/default/objects/Error_Event__c/fields/Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Raw_Payload__c</fullName>
    <label>Raw Payload</label>
    <description>Verbatim inbound notification body (and key headers). Retained untouched so a parse failure never loses data and parsing can be re-run.</description>
    <inlineHelpText>The original, unmodified error notification text as received.</inlineHelpText>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>