force-app/main/default/objects/Error_Event__c/fields/Received_At__c.field-meta.xml
<CustomField>
    <fullName>Received_At__c</fullName>
    <label>Received At</label>
    <description>Timestamp the inbound handler staged this occurrence. Used for windowing by the dedup batch and for first/last-seen accounting on the signature.</description>
    <inlineHelpText>When this error notification was received and staged.</inlineHelpText>
    <type>DateTime</type>
</CustomField>