force-app/main/default/objects/Error_Event__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <description>The Error Signature this occurrence was deduplicated onto. Set by the dedup batch after grouping by fingerprint.</description>
    <inlineHelpText>The unique error signature this occurrence belongs to.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Error_Signature__c</referenceTo>
    <relationshipLabel>Error Events</relationshipLabel>
    <relationshipName>Error_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>