force-app/main/default/objects/Error_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Discriminator identifying which feed produced this error notification. Drives source-aware parsing and fingerprinting.</description>
    <inlineHelpText>The system that emitted this error (Apex exception email, Flow fault, or platform-event log).</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
                <default>true</default>
                <label>Apex</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>PlatformEvent</fullName>
                <label>Platform Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>