force-app/main/default/objects/Error_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Lifecycle state of this occurrence through the remediation pipeline. Drives which rows the dedup batch and diagnosis steps pick up.</description>
    <inlineHelpText>Where this event is in the pipeline (Received through Cased, plus off-ramps).</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
                <default>true</default>
                <label>Received</label>
            </value>
            <value>
                <fullName>Parsed</fullName>
            </value>
            <value>
                <fullName>ParseError</fullName>
                <label>Parse Error</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Representative</fullName>
            </value>
            <value>
                <fullName>Diagnosing</fullName>
            </value>
            <value>
                <fullName>Diagnosed</fullName>
            </value>
            <value>
                <fullName>Cased</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>