force-app/main/default/objects/Error_Event__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Status Reason</label>
    <description>Human-readable explanation for the current status, especially for ParseError, Excluded, Deferred, and Failed states. Aids triage without opening the raw payload.</description>
    <inlineHelpText>Why the event is in its current status (e.g. which exclusion rule matched, or the parse error detail).</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>