force-app/main/default/objects/Error_Event__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <description>Subject line of the inbound notification. Used as a secondary signal for source detection.</description>
    <inlineHelpText>The email subject line as received.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>